Fixed some layout issues.
git-svn-id: svn+ssh://rubyforge.org/var/svn/myexperiment/branches/mark-branch@1182 4f7b4649-9ca9-420a-81b3-55a188e4d46f

--- a/public/stylesheets/styles.css
+++ b/public/stylesheets/styles.css
@@ -95,14 +95,10 @@ pre {
 a {
 	color: #000099;
 	text-decoration: none;
-	border-bottom: 1px dashed transparent; 
-	*border: none;
 }
 
 a:hover {
 	color: red;
-	border-bottom: 1px dotted gray; 
-	*border: none;
 }
 
 small {
